--- a/config/locales/payment_method.pt-BR.yml
+++ b/config/locales/payment_method.pt-BR.yml
@@ -7,7 +7,14 @@ pt-BR:
         other: 'Meios de Pagamentos'
     attributes:
       payment_method:
+        form_of_payment: 'Forma de Pagamento'
         name: 'Nome'
         tax: 'Taxa por Cobrança em (%)'
         max_tax: 'Taxa Máxima em (R$)'
         status: 'Status'
+      payment_method/form_of_payment:
+        bank_slip: 'Boleto'
+        credit_card: 'Cartão de Crédito'
+        pix: 'Pix'
+  
+        
